# sevco-shell

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
sevco_shell/: __init__.py  shell.py
sevco_shell/builders/: builder.py  plugin.py  source.py  source_config.py  tenant.py
sevco_shell/clients/: client.py  models.py
sevco_shell/clients/plugin_repository/: client.py  models.py
sevco_shell/clients/runner/: client.py  models.py
sevco_shell/clients/scheduler/: client.py  models.py
sevco_shell/clients/schema/: client.py  models.py
sevco_shell/clients/source_audit/: client.py  model.py
sevco_shell/clients/source_catalog/: client.py  models.py
sevco_shell/clients/source_config/: client.py  model.py
sevco_shell/clients/source_oauth/: client.py  model.py
sevco_shell/clients/tenant/: client.py  models.py
sevco_shell/commands/: command.py  orgs.py  plugins.py  roles.py  runners.py  schedule.py  schemas.py  source_configs.py  sources.py  users.py
sevco_shell/config/: __init__.py  config.py  credentials.py
sevco_shell/scopes/: org.py  scope.py  source.py  sv.py  user.py
