[metadata]
name = sevco-shell
description = Sevco Shell
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sevco/sevco-shell
author = Sevco
author_email = support@sevco.io
project_urls =
    Bug Reports = https://github.com/sevco/sevco-shell
    Source = https://github.com/sevco/sevco-shell

[options]
packages = find:

install_requires =
    requests>=2.24.0
    colorama>=0.4.3
    toml>=0.10.1
    dacite>=1.5.1
    python-dateutil>=2.8.1
    PyJWT==1.7.1

[options.entry_points]
console_scripts =
    svsh = sevco_shell.shell:main
